--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
     "theme_color": "#0d9488",
     "icons": [
         {
-            "src": "logo-192.png",
+            "src": "logo-192.png?v=2",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "logo-512.png",
+            "src": "logo-512.png?v=2",
             "sizes": "512x512",
             "type": "image/png"
         }
