--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,28 @@
 {
     "name": "Rangaraju Lab",
     "short_name": "Rangaraju Lab",
-    "description": "Investigating neuroenergetics and mitochondrial function at Max Planck Florida Institute for Neuroscience",
+    "description": "Exploring how neurons fuel brain function through mitochondria, synaptic energy, and neurodegeneration research at Max Planck Florida Institute for Neuroscience",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#f8fafc",
     "theme_color": "#0d9488",
     "icons": [
         {
-            "src": "logo-192.png?v=2",
-            "sizes": "192x192",
+            "src": "/favicon-48.png?v=5",
+            "sizes": "48x48",
             "type": "image/png"
         },
         {
-            "src": "logo-512.png?v=2",
+            "src": "/logo-192.png?v=5",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/logo-512.png?v=5",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         }
     ]
 }
